--- a/numerical_methods/direct_metods.ipynb
+++ b/numerical_methods/direct_metods.ipynb
@@ -2,20 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import math\n",
-    "# np.set_printoptions(2)"
+    "import math"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def is_u_triangular(a:np.ndarray):\n",
@@ -32,26 +31,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "def rotation_method(a:np.ndarray):\n",
-    "    a = a.copy()\n",
+    "def reflection_method(a:np.ndarray):\n",
     "    n, m = a.shape\n",
-    "    for i in range(0, m - 1):\n",
-    "        for j in range(i + 1, n):\n",
-    "            temp = math.sqrt(a[i,i] ** 2 + a[j,i] ** 2)\n",
-    "            cos = a[i,i] / (temp)\n",
-    "            sin = a[j,i] / (temp)\n",
-    "            a_i = cos * a[i] + sin * a[j]\n",
-    "            a_j = -sin * a[i] + cos * a[j]\n",
-    "            a[i] = a_i\n",
-    "            a[j] = a_j\n",
-    "    x = np.zeros(n)\n",
-    "    # TODO: add backward trace\n",
-    "\n",
-    "\n",
-    "    return a"
+    "    w = np.random.sample((1,n))\n",
+    "    w /= np.linalg.norm(w)\n",
+    "    return np.sum(w)"
    ],
    "metadata": {
     "collapsed": false,
@@ -62,31 +49,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "def backward_gauss_method(a:np.ndarray):\n",
+    "    a = a.copy()\n",
+    "    n, m = a.shape\n",
+    "    x = np.zeros((n, 1))\n",
+    "    for k in range(n-1, -1, -1):\n",
+    "        x[k] = (a[k, -1] - np.dot(a[k, k:n], x[k:n])) / a[k, k]\n",
+    "    return x"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "def rotation_method(a:np.ndarray):\n",
+    "    a = a.copy()\n",
+    "    n, m = a.shape\n",
+    "    for k in range(0, m - 1):\n",
+    "        for j in range(k + 1, n):\n",
+    "            temp = math.sqrt(a[k,k] ** 2 + a[j,k] ** 2)\n",
+    "            cos = a[k,k] / (temp)\n",
+    "            sin = a[j,k] / (temp)\n",
+    "            a_i = cos * a[k] + sin * a[j]\n",
+    "            a_j = -sin * a[k] + cos * a[j]\n",
+    "            a[k] = a_i\n",
+    "            a[j] = a_j\n",
+    "    return backward_gauss_method(a)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1.85e+01  6.59e+00  6.71e+00  7.46e-01  1.38e+01]\n",
-      " [-0.00e+00  2.67e+01 -6.14e+00 -3.05e+00  1.60e+00]\n",
-      " [ 0.00e+00 -3.10e-16  1.56e+00 -5.71e+00 -5.20e+00]\n",
-      " [ 0.00e+00  3.18e-16  0.00e+00 -1.68e+00 -1.68e+00]]\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "setting an array element with a sequence.",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
-      "\u001B[1;31mTypeError\u001B[0m: only size-1 arrays can be converted to Python scalars",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-128-8e90dfc7d7d4>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      4\u001B[0m                  [18, 4.1, 7.3, -0.1, 12.334]]\n\u001B[0;32m      5\u001B[0m                  )\n\u001B[1;32m----> 6\u001B[1;33m \u001B[0mres\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mrotation_method\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mtest\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      7\u001B[0m \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mres\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;32m<ipython-input-127-543d5f2a94c2>\u001B[0m in \u001B[0;36mrotation_method\u001B[1;34m(a)\u001B[0m\n\u001B[0;32m     14\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0ma\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     15\u001B[0m     \u001B[1;32mfor\u001B[0m \u001B[0mk\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mn\u001B[0m \u001B[1;33m-\u001B[0m \u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 16\u001B[1;33m         \u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mk\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;33m(\u001B[0m\u001B[0ma\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mk\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m-\u001B[0m\u001B[1;36m2\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0ma\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mk\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mk\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0mm\u001B[0m\u001B[1;33m-\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m*\u001B[0m \u001B[0mx\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mk\u001B[0m\u001B[1;33m:\u001B[0m\u001B[0mn\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m/\u001B[0m \u001B[0ma\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mk\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mk\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     17\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     18\u001B[0m     \u001B[1;32mreturn\u001B[0m \u001B[0ma\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mValueError\u001B[0m: setting an array element with a sequence."
+      "[[0.5 ]\n",
+      " [0.25]\n",
+      " [0.33]\n",
+      " [1.  ]]\n"
      ]
     }
    ],
@@ -108,60 +126,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.85e+01  6.59e+00  6.71e+00  7.46e-01]\n",
-      " [-0.00e+00  2.67e+01 -6.14e+00 -3.05e+00]\n",
-      " [ 0.00e+00 -3.10e-16  1.56e+00 -5.71e+00]\n",
-      " [ 0.00e+00  3.18e-16  0.00e+00 -1.68e+00]]\n",
-      "[[ 1.85e+01  6.59e+00  6.71e+00  7.46e-01  1.38e+01]\n",
-      " [-0.00e+00  2.67e+01 -6.14e+00 -3.05e+00  1.60e+00]\n",
-      " [ 0.00e+00 -3.10e-16  1.56e+00 -5.71e+00 -5.20e+00]\n",
-      " [ 0.00e+00  3.18e-16  0.00e+00 -1.68e+00 -1.68e+00]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(res[:, :4])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ True  True  True  True  True]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(res[1] == res[1, :])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "outputs": [],
-   "source": [],
+   "source": [
+    "print()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = test[:, :4]\n",
+    "b = test[:,-1]\n",
+    "print(np.allclose(np.linalg.solve(a, b), res[:,0]))\n",
+    "\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
