--- a/numerical_methods/direct_metods.ipynb
+++ b/numerical_methods/direct_metods.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import math"
+    "import math\n",
+    "import unittest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def is_u_triangular(a:np.ndarray):\n",
@@ -37,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 64,
    "outputs": [],
    "source": [
-    "def reflection_method(matrix:np.ndarray):\n",
-    "    b = matrix[:, -1:].copy()\n",
-    "    a = matrix[:,:-1].copy()\n",
+    "def reflection_method(a:np.array, b:np.array) -> np.array:\n",
+    "    b = b.copy()\n",
+    "    a = a.copy()\n",
     "    n, m = a.shape\n",
     "    for i in range(n-1):\n",
     "        s = sign(-a[i,i])*np.linalg.norm(a[:, i])\n",
@@ -55,13 +56,6 @@
     "        u = np.eye(n) - 2 * np.matmul(w, w.T)\n",
     "        a = np.matmul(u, a)\n",
     "        b = np.matmul(u, b)\n",
-    "        # print(\"i= \", i)\n",
-    "        # print(\"s: \", s)\n",
-    "        # print(\"etta: \", etta)\n",
-    "        # print(\"w: \", w)\n",
-    "        # print(\"u: \", u)\n",
-    "        # print(\"a: \", a)\n",
-    "        # print(\"b: \", b)\n",
     "    return backward_gauss_method(np.concatenate((a, b), axis=1))"
    ],
    "metadata": {
@@ -73,10 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "outputs": [],
    "source": [
-    "def backward_gauss_method(a:np.ndarray):\n",
+    "def backward_gauss_method(a:np.array) -> np.array:\n",
     "    a = a.copy()\n",
     "    n, m = a.shape\n",
     "    x = np.zeros((n, 1))\n",
@@ -93,10 +87,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "def rotation_method(a:np.ndarray):\n",
+    "def rotation_method(a:np.array) -> np.array:\n",
     "    a = a.copy()\n",
     "    n, m = a.shape\n",
     "    for k in range(0, m - 1):\n",
@@ -119,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -150,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -172,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -197,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -235,21 +229,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([[-5.95894535,  0.25706894, -1.23154534, -2.14725253, -5.98434668],\n",
-      "       [-7.0706967 ,  1.06033129, -1.23154534, -2.50725253, -5.71434668],\n",
-      "       [-6.94729136,  0.17467874, -0.41520287, -2.11725253, -5.56434668],\n",
-      "       [-6.93061496, -0.14572758, -0.89097296, -1.69725253, -5.80434668],\n",
-      "       [-7.03484244,  0.07169099, -0.95477466, -2.21725253, -5.14434668]]), array([[ 0.48193363],\n",
-      "       [-0.46812637],\n",
-      "       [ 0.36777363],\n",
-      "       [ 0.69897363],\n",
-      "       [ 0.05817363]]))\n"
+      "[[ 0.2415404 ]\n",
+      " [-0.24623598]\n",
+      " [-0.256537  ]\n",
+      " [ 1.1610081 ]\n",
+      " [-0.04976496]]\n"
      ]
     }
    ],
@@ -265,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -297,41 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-11.40175425099138\n",
-      "0.05720293851851626\n"
-     ]
-    }
-   ],
-   "source": [
-    "example = np.array([\n",
-    "    [2, 3, -4, 1, 3],\n",
-    "    [1, -2, -5, 1, 2],\n",
-    "    [5, -3, 1, -4, 1],\n",
-    "    [10, 2, -1, 2, 4]\n",
-    "], dtype='float64')\n",
-    "ex_a = example[:,:-1].copy()\n",
-    "ex_b = example[:, -1:].copy()\n",
-    "s = sign(-ex_a[0,0])*np.linalg.norm(ex_a[:, 0])\n",
-    "etta = 1 / math.sqrt(2 * s * (s - ex_a[0,0]))\n",
-    "print(s)\n",
-    "print(etta)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -344,14 +300,7 @@
      ]
     }
    ],
-   "source": [
-    "w = ex_a[:,0][..., np.newaxis].copy()\n",
-    "for j in range(0):\n",
-    "    w[j] = 0\n",
-    "w[0] -= s\n",
-    "w *= etta\n",
-    "print(w)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -361,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -387,21 +336,219 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 61,
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "test_3x3 (__main__.TestBackwardGaussMethod) ... ok\n",
+      "test_5_x_5 (__main__.TestBackwardGaussMethod) ... ok\n",
+      "test_hilbert (__main__.TestReflectionMethod) ... FAIL\n",
+      "test_square (__main__.TestReflectionMethod) ... FAIL\n",
+      "test_symmetric (__main__.TestReflectionMethod) ... FAIL\n",
+      "test_hilbert (__main__.TestRotationMethod) ... ok\n",
+      "test_square (__main__.TestRotationMethod) ... ok\n",
+      "test_symmetric (__main__.TestRotationMethod) ... ok\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_hilbert (__main__.TestReflectionMethod)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-61-be504b517716>\", line 105, in test_hilbert\n",
+      "    self.pattern(a, x, self.test_hilbert)\n",
+      "  File \"<ipython-input-61-be504b517716>\", line 81, in pattern\n",
+      "    self.assertTrue(is_close)\n",
+      "AssertionError: False is not true\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_square (__main__.TestReflectionMethod)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-61-be504b517716>\", line 100, in test_square\n",
+      "    self.pattern(a, x, self.test_square)\n",
+      "  File \"<ipython-input-61-be504b517716>\", line 81, in pattern\n",
+      "    self.assertTrue(is_close)\n",
+      "AssertionError: False is not true\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_symmetric (__main__.TestReflectionMethod)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-61-be504b517716>\", line 91, in test_symmetric\n",
+      "    self.pattern(a, x, self.test_symmetric)\n",
+      "  File \"<ipython-input-61-be504b517716>\", line 81, in pattern\n",
+      "    self.assertTrue(is_close)\n",
+      "AssertionError: False is not true\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 8 tests in 0.039s\n",
+      "\n",
+      "FAILED (failures=3)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-1.14017543e+01 -7.89352217e-01  1.57870443e+00 -2.63117406e-01]\n",
-      " [ 0.00000000e+00 -2.28275046e+00 -4.58373327e+00  9.05749846e-01]\n",
-      " [ 1.77635684e-15 -4.41375231e+00  3.08133366e+00 -4.47125077e+00]\n",
-      " [ 1.77635684e-15 -8.27504628e-01  3.16266731e+00  1.05749846e+00]]\n"
+      "TestReflectionMethod\n",
+      "<bound method TestReflectionMethod.test_hilbert of <__main__.TestReflectionMethod testMethod=test_hilbert>> \n",
+      " [[-0.02421435]\n",
+      " [ 0.09699451]\n",
+      " [ 0.01384976]\n",
+      " [-0.04753712]\n",
+      " [-0.08507607]]\n",
+      "TestReflectionMethod\n",
+      "<bound method TestReflectionMethod.test_square of <__main__.TestReflectionMethod testMethod=test_square>> \n",
+      " [[-0.50129495]\n",
+      " [ 0.01584289]\n",
+      " [-0.3345553 ]\n",
+      " [ 0.26595235]]\n",
+      "TestReflectionMethod\n",
+      "<bound method TestReflectionMethod.test_symmetric of <__main__.TestReflectionMethod testMethod=test_symmetric>> \n",
+      " [[-0.06063187]\n",
+      " [-0.16106731]\n",
+      " [-0.02576008]\n",
+      " [-0.312363  ]\n",
+      " [ 0.01710571]]\n",
+      "TestRotationMethod\n",
+      "<bound method TestRotationMethod.test_hilbert of <__main__.TestRotationMethod testMethod=test_hilbert>> \n",
+      " [[1.33226763e-15]\n",
+      " [6.66133815e-16]\n",
+      " [5.55111512e-16]\n",
+      " [4.99600361e-16]\n",
+      " [2.22044605e-16]]\n",
+      "TestRotationMethod\n",
+      "<bound method TestRotationMethod.test_square of <__main__.TestRotationMethod testMethod=test_square>> \n",
+      " [[ 0.00000000e+00]\n",
+      " [ 0.00000000e+00]\n",
+      " [-3.55271368e-15]\n",
+      " [ 0.00000000e+00]]\n",
+      "TestRotationMethod\n",
+      "<bound method TestRotationMethod.test_symmetric of <__main__.TestRotationMethod testMethod=test_symmetric>> \n",
+      " [[-8.88178420e-16]\n",
+      " [ 0.00000000e+00]\n",
+      " [-6.66133815e-16]\n",
+      " [ 0.00000000e+00]\n",
+      " [-1.66533454e-16]]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "<unittest.main.TestProgram at 0x16fd18c78d0>"
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(np.matmul(u, ex_a))"
+    "import unittest\n",
+    "class TestBackwardGaussMethod(unittest.TestCase):\n",
+    "    def pattern(self, a, x):\n",
+    "        b = np.matmul(a, x)\n",
+    "        a_extend = np.append(a, b, axis=1)\n",
+    "        calc_x = backward_gauss_method(a_extend)\n",
+    "        is_close = np.allclose(\n",
+    "            calc_x,\n",
+    "            x\n",
+    "        )\n",
+    "        self.assertTrue(is_close)\n",
+    "    def test_5_x_5(self):\n",
+    "        a = np.array([\n",
+    "            [1, 2, 3, 4, 5],\n",
+    "            [0, 7, 6, 1, 2],\n",
+    "            [0, 0, 3, 5, 8],\n",
+    "            [0, 0, 0, 9, 2],\n",
+    "            [0, 0, 0, 0, 1]\n",
+    "        ], dtype='float64')\n",
+    "        x = np.array([[-5, 6, 8, -2, -4]]).T\n",
+    "        self.pattern(a, x)\n",
+    "    def test_3x3(self):\n",
+    "        a = np.array([\n",
+    "            [7, -2, 3],\n",
+    "            [0, 9, 0],\n",
+    "            [0, 0, -2]\n",
+    "        ], dtype='float64')\n",
+    "        x = np.array([[-1, 2, -6]]).T\n",
+    "        self.pattern(a, x)\n",
+    "class TestRotationMethod(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        print(type(self).__name__)\n",
+    "    def pattern(self, a, x, method_name):\n",
+    "        b = np.matmul(a, x)\n",
+    "        a_extend = np.append(a, b, axis=1)\n",
+    "        calc_x = rotation_method(a_extend)\n",
+    "        is_close = np.allclose(\n",
+    "            calc_x,\n",
+    "            x\n",
+    "        )\n",
+    "        discrepancy = b - np.matmul(a, calc_x)\n",
+    "        print(str(method_name), '\\n', discrepancy)\n",
+    "        self.assertTrue(is_close)\n",
+    "    def test_symmetric(self):\n",
+    "        a = np.array([\n",
+    "            [0.521,-0.296, 0, 0.04, -0.21],\n",
+    "            [-0.296, 0.7, 0.24, -0.32, 0.06],\n",
+    "            [0, 0.24, -0.35, 0.07, 0.21],\n",
+    "            [0.04, -0.32, 0.7, 0.49, -0.03],\n",
+    "            [-0.21, 0.06, 0.21, -0.03, 0.63]\n",
+    "        ], dtype='float64')\n",
+    "        x = np.array([[1, -3, 4, 8, -1]]).T\n",
+    "        self.pattern(a, x, self.test_symmetric)\n",
+    "    def test_square(self):\n",
+    "        a = np.array([\n",
+    "            [2, 3, -4, 1],\n",
+    "            [1, -2, -5, 1],\n",
+    "            [5, -3, 1, -4],\n",
+    "            [10, 2, -1, 2]\n",
+    "        ], dtype='float64')\n",
+    "        x = np.array([[1, 3, -4, 2]], dtype='float64').T\n",
+    "        self.pattern(a, x, self.test_square)\n",
+    "    def test_hilbert(self):\n",
+    "        n = 5\n",
+    "        a = np.array([[1/(i + j - 1) for j in range(1, n+1)] for i in range(1, n + 1)])\n",
+    "        x = np.array([[-5, 6, 8, -2, -4]]).T\n",
+    "        self.pattern(a, x, self.test_hilbert)\n",
+    "class TestReflectionMethod(unittest.TestCase):\n",
+    "    def setUp(self):\n",
+    "        print(type(self).__name__)\n",
+    "    def pattern(self, a, x, method_name):\n",
+    "        b = np.matmul(a, x)\n",
+    "        a_extend = np.append(a, b, axis=1)\n",
+    "        calc_x = reflection_method(a_extend)\n",
+    "        is_close = np.allclose(\n",
+    "            calc_x,\n",
+    "            x\n",
+    "        )\n",
+    "        discrepancy = b - np.matmul(a, calc_x)\n",
+    "        print(str(method_name), '\\n', discrepancy)\n",
+    "        self.assertTrue(is_close)\n",
+    "    def test_symmetric(self):\n",
+    "        a = np.array([\n",
+    "            [0.521,-0.296, 0, 0.04, -0.21],\n",
+    "            [-0.296, 0.7, 0.24, -0.32, 0.06],\n",
+    "            [0, 0.24, -0.35, 0.07, 0.21],\n",
+    "            [0.04, -0.32, 0.7, 0.49, -0.03],\n",
+    "            [-0.21, 0.06, 0.21, -0.03, 0.63]\n",
+    "        ], dtype='float64')\n",
+    "        x = np.array([[1, -3, 4, 8, -1]]).T\n",
+    "        self.pattern(a, x, self.test_symmetric)\n",
+    "    def test_square(self):\n",
+    "        a = np.array([\n",
+    "            [2, 3, -4, 1],\n",
+    "            [1, -2, -5, 1],\n",
+    "            [5, -3, 1, -4],\n",
+    "            [10, 2, -1, 2]\n",
+    "        ], dtype='float64')\n",
+    "        x = np.array([[1, 3, -4, 2]], dtype='float64').T\n",
+    "        self.pattern(a, x, self.test_square)\n",
+    "    def test_hilbert(self):\n",
+    "        n = 5\n",
+    "        a = np.array([[1/(i + j - 1) for j in range(1, n+1)] for i in range(1, n + 1)])\n",
+    "        x = np.array([[-5, 6, 8, -2, -4]]).T\n",
+    "        self.pattern(a, x, self.test_hilbert)\n",
+    "unittest.main(argv=[''], verbosity=2, exit=False)"
    ],
    "metadata": {
     "collapsed": false,
@@ -412,7 +559,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "n = 5\n",
+    "a = np.array([\n",
+    "    [2, 3, -4, 1],\n",
+    "    [1, -2, -5, 1],\n",
+    "    [5, -3, 1, -4],\n",
+    "    [10, 2, -1, 2]\n",
+    "], dtype='float64')\n",
+    "\n",
+    "b = np.array([[3, 2, 1, 4]], dtype='float64').T\n",
+    "x_calc = reflection_method(a, b)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "outputs": [
     {
      "name": "stdout",
@@ -426,7 +596,7 @@
     }
    ],
    "source": [
-    "print(reflection_method(example))\n"
+    "print(x_calc)"
    ],
    "metadata": {
     "collapsed": false,
@@ -437,21 +607,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 72,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 2.  3. -4.  1.  3.]\n",
-      " [ 1. -2. -5.  1.  2.]\n",
-      " [ 5. -3.  1. -4.  1.]\n",
-      " [10.  2. -1.  2.  4.]]\n"
+      "[[-2.79258168]\n",
+      " [ 0.76184989]\n",
+      " [ 0.67504234]\n",
+      " [ 0.56206945]\n",
+      " [ 7.18503136]]\n"
      ]
     }
    ],
    "source": [
-    "print(np.concatenate((ex_a, ex_b), axis=1))"
+    "a_1 = np.array([[1/(i + j - 1) for j in range(1, n+1)] for i in range(1, n + 1)], dtype='float64')\n",
+    "x_1 = np.array([[-5, 6, 8, -2, -4]], dtype='float64').T\n",
+    "b_1 = np.matmul(a_1, x_1)\n",
+    "x_calc_1 = reflection_method(a_1, b_1)\n",
+    "print(x_calc_1)"
    ],
    "metadata": {
     "collapsed": false,
