--- a/iteration_methods.ipynb
+++ b/iteration_methods.ipynb
@@ -2,186 +2,195 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import unittest\n",
-    "from itertools import chain"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-cd6ae9f2f383>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m def jacobi_method(\n\u001b[1;32m----> 2\u001b[1;33m         \u001b[0ma\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         b:np.array)-> np.array:\n\u001b[0;32m      4\u001b[0m     \u001b[0mEPS\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1e-20\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mn\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
-     ]
-    }
+   "execution_count": 105,
+   "outputs": [],
+   "source": [
+    "# Метод Якоби"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def jacobi_method(\n",
     "        a:np.array,\n",
-    "        b:np.array) -> np.array:\n",
+    "        b:np.array,\n",
+    "        eps:float=1e-6) -> np.array:\n",
     "    if np.allclose(np.diag(a), 0):\n",
     "        raise ValueError(\"All diagonal elements are close to zero \")\n",
-    "    EPS = 1e-20\n",
     "    n, m = a.shape\n",
-    "    a = a.copy()\n",
-    "    b = b.copy()\n",
-    "    t = True\n",
-    "    x = np.random.rand(n, 1)\n",
-    "    x_next = np.zeros((n, 1))\n",
-    "    x /= np.linalg.norm(x)\n",
-    "    while t:\n",
-    "        \n",
-    "    return x"
+    "    A = a.copy()\n",
+    "    B = b.copy()\n",
+    "    norm = eps + 1\n",
+    "    current_solution = np.zeros((n, 1))\n",
+    "    previous_solution = B / A.diagonal()\n",
+    "    while norm > eps:\n",
+    "        current_solution = B.copy()\n",
+    "        for i in range(n):\n",
+    "            for j in range(n):\n",
+    "                if i != j:\n",
+    "                    current_solution[i][0] -= A[i,j] * previous_solution[j][0]\n",
+    "        current_solution /= A.diagonal()[:,np.newaxis]\n",
+    "        norm = np.linalg.norm(current_solution - previous_solution)\n",
+    "        previous_solution = current_solution\n",
+    "\n",
+    "    return current_solution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_canonical_form(a:np.array, b:np.array) -> np.array:\n",
-    "    a = a.copy()\n",
-    "    b = b.copy()\n",
-    "    b = b.T / np.diag(a)\n",
-    "    a = a / -np.diag(a)\n",
-    "    np.fill_diagonal(a, 0)\n",
-    "    return (a, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = np.array([[4, 0.24, -0.08],\n",
-    "               [0.09, 3, -0.15],\n",
-    "               [0.04, -0.08, 4]])\n",
-    "test_2 = np.array([[0, 0.24, -0.08],\n",
-    "               [0.09, 0, -0.15],\n",
-    "               [0.04, -0.08, 0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 107,
    "outputs": [],
    "source": [
     "a = np.array([[10, 1, -1],\n",
     "            [1, 10, -1],\n",
-    "             [-1, 1, 10]])\n",
-    "b = np.array([[11, 10, 10]]).T"
-   ]
+    "             [-1, 1, 10]], dtype=\"float64\")\n",
+    "b = np.array([[11, 10, 10]], dtype=\"float64\").T"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "(array([[ 0. , -0.1,  0.1],\n",
-       "        [-0.1,  0. ,  0.1],\n",
-       "        [ 0.1, -0.1,  0. ]]), array([[1.1, 1. , 1. ]]))"
-      ]
+      "text/plain": "array([[1.1020202],\n       [0.9909091],\n       [1.0111111]])"
      },
-     "execution_count": 71,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "to_canonical_form(a, b)"
+    "jacobi_method(a, b)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
+   "execution_count": 109,
    "outputs": [
     {
      "data": {
-      "text/plain": [
-       "array([10, 10, 10])"
-      ]
+      "text/plain": "array([[1.1020202 ],\n       [0.99090909],\n       [1.01111111]])"
      },
-     "execution_count": 58,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.diag(a)"
-   ]
+    "np.linalg.solve(a, b)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Метод минимальных невязок"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "No loop matching the specified signature and casting was found for ufunc true_divide",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-67-32e30aea5e7e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m/=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: No loop matching the specified signature and casting was found for ufunc true_divide"
-     ]
-    }
-   ],
+   "execution_count": 119,
+   "outputs": [],
    "source": [
-    "b.T /= np.diag(a)"
-   ]
+    "def minimal_residuals(a:np.array, b:np.array, eps=1e-6):\n",
+    "    n, _ = a.shape\n",
+    "    prev_solution = np.ones((n, 1))\n",
+    "    current_solution = np.zeros((n, 1))\n",
+    "    r = np.ones((n, 1))\n",
+    "    while np.linalg.norm(r) > eps:\n",
+    "        r = a @ prev_solution - b\n",
+    "        temp = (a @ r)[:,0]\n",
+    "        iter_param = np.inner(temp, r[:,0]) / np.inner(temp, temp)\n",
+    "        current_solution = prev_solution - iter_param * r\n",
+    "        prev_solution = current_solution\n",
+    "    return current_solution"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
+   "execution_count": 120,
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "No loop matching the specified signature and casting was found for ufunc true_divide",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-68-405090297337>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ma\u001b[0m \u001b[1;33m/=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdiag\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: No loop matching the specified signature and casting was found for ufunc true_divide"
-     ]
+     "data": {
+      "text/plain": "array([[1.1020202 ],\n       [0.99090909],\n       [1.01111111]])"
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a /= -np.diag(a)"
-   ]
+    "minimal_residuals(a, b)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-0.01960784],\n       [ 0.09803922],\n       [-0.09803922]])"
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a @ Out[112] - b"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
